do not use, dynamic aspects of page do not work on github pages

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <nav>
     <ul class="nav nav-tabs justify-content-end">
       <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="/analysis">Analysis</a></li>
-      <li class="nav-item"><a class="nav-link" href="/explore">Explore</a></li>
+      <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="analysis.html">Analysis</a></li>
+      <li class="nav-item"><a class="nav-link" href="explore.html">Explore</a></li>
     </ul>
   </nav>
 </div>
